WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200728
REGRESSION(
r245320
): Web Automation: Perform Actions hangs when pointerdown happens near top of page
https://bugs.webkit.org/show_bug.cgi?id=200728
Summary
REGRESSION(r245320): Web Automation: Perform Actions hangs when pointerdown h...
Blaze Burg
Reported
2019-08-14 12:02:51 PDT
Ugh..
Attachments
Patch
(5.83 KB, patch)
2019-08-14 12:55 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2019-08-14 12:03:07 PDT
<
rdar://problem/54260518
>
Blaze Burg
Comment 2
2019-08-14 12:55:05 PDT
Created
attachment 376299
[details]
Patch
Blaze Burg
Comment 3
2019-08-14 13:14:04 PDT
Comment on
attachment 376299
[details]
Patch Devin reviewed this change in
https://bugs.webkit.org/show_bug.cgi?id=200729
.
Blaze Burg
Comment 4
2019-08-14 16:57:10 PDT
Committed
r248696
: <
https://trac.webkit.org/changeset/248696
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug